ffmpeg (7:2.6.2-1) UNRELEASED; urgency=medium

  * Import new upstream bugfix release 2.6.2.
  * Drop build-dependency on bc, the tests use awk since 2.6.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Sun, 12 Apr 2015 20:17:32 +0200

ffmpeg (7:2.6.1-1) unstable; urgency=medium

  * Import new major upstream release 2.6.1.
  * Add Breaks and Replaces on libav-tools (<< 6:9~), which shipped ff*
    symlinks. Thanks to Andreas Beckmann. (Closes: #779664)
  * Adapt debian/rules to changes in the configure script:
     - Don't explicitly set shlibdir as it now defaults to libdir.
     - Drop --disable-mips32r2, which has no effect anymore.
     - Don't add --disable-mipsfpu on mips64(el) as it should work there.
  * Enable libx265-dev on sparc, m68k and sh4, where it is now available.
  * Update debian/missing-sources.
  * Drop patches included upstream:
     - configure-use-ar-and-ranlib-in-deterministic-mode-if.patch
     - stop-embedding-the-build-date.patch
  * Add new symbols to debian/*.symbols.
  * Add autopkgtests:
     - examples: compile the example programs
     - encdec: test creating/reading files for many codec/format combinations
  * Update debian/copyright.
  * Add Breaks on kodi-bin (<= 14.0+dfsg1-1), because it uses internal FFmpeg
    API, which was changed incompatibly.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Mon, 16 Mar 2015 23:53:34 +0100

ffmpeg (7:2.5.4-1) unstable; urgency=medium

  * Import new upstream bugfix release 2.5.4.
  * Drop configure-enable-vsx-together-with-altivec-for-ppc64el.patch
    included upstream.
  * Add patches making the build binary reproducible.
  * Stop using faketime.
  * Correctly handle noopt in DEB_BUILD_OPTIONS.
  * Disable assembler optimizations on ppc64el, as they don't work yet.
  * Disable assembler optimizations on mips64(el), as they don't work yet.
    Thanks to James Cowgill. (Closes: #776649)
  * Fix dep5-copyright-license-name-not-unique lintian warnings.
